--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - DATABASE_URL=file:./syllabus_master.db
+      - DATABASE_URL=file:./prisma/syllabus_master.db
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
     volumes:
       - ./prisma:/app/prisma
